<resources>
    <string name="app_name">New Yorker DK</string>
    <string name="height">Højde</string>
    <string name="width">Bredde</string>
    <string name="panel_count_height_text">Antal glasfelter per fag</string>
    <string name="panel_count_width_text">Antal fag</string>
    <string name="additions">Tilføjelser</string>
    <string name="oversigt">Oversigt</string>
    <string name="wall1">Wall1</string>
    <string name="wall2">wall2</string>
    <string name="wall3">wall3</string>
    <string name="tilf_j_v_g">Tilføj væg</string>
    <string name="fors_t">Forsæt</string>
    <string name="price"> %s kr</string>
    <string name="total_price">%s kr</string>
    <string name="width_basket">W: %s </string>
    <string name="height_basket">H: %s </string>
    <string name="fields_height_basket">Glas I H: %s </string>
    <string name="fields_width_basket">Antal fag: %s </string>

    <string name="done">Færdig</string>
    <string name="add">Tilføj</string>
    <string name="price_estimate">Prisestimat:</string>
    <string name="in_cm"><font size="10">Angives i cm</font></string>
    <string-array name="supplier">
        <item>Vælg forhandler</item>
        <item>Stark</item>
        <item>XL-byg</item>
        <item>Ilva</item>
        <item>Salessyling.dk</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total">Total:</string>
    <string name="slet_alt">Slet alt</string>
    <string name="total_zero">0 kr</string>
</resources>