<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.fragments.BasketFragment">

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="108dp"
        android:text="@string/oversigt"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:background="#bf8e55"
        android:onClick="contactActivity"
        android:text="@string/tilf_j_v_g"
        android:textColorLink="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:background="#bf8e55"
        android:onClick="contactActivity"
        android:text="@string/fors_t"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/clear"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="#F44336"
        android:text="@string/slet_alt"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/totalPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="44dp"
        android:text="@string/total"
        android:textSize="26dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="409dp"
        android:layout_height="399dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="44dp"
        android:text="Total:"
        android:textColor="@color/black"
        android:textSize="26dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>