<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/wall_price_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/recycler_delete"
            android:layout_width="27dp"
            android:layout_height="37dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/wall_price_textview"
            app:layout_constraintEnd_toEndOf="@+id/wall_price_textview"
            app:srcCompat="@drawable/baseline_delete_24dp" />

        <TextView
            android:id="@+id/wall_note_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wall_width_textfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/width_basket"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wall_note_textview" />

        <TextView
            android:id="@+id/wall_height_textfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/height_basket"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wall_width_textfield" />

        <TextView
            android:id="@+id/wall_fields_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:text="@string/fields_width_basket"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@+id/additions_textfield"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wall_height_textfield" />

        <TextView
            android:id="@+id/wall_fields_height"
            android:layout_width="0dp"
            android:layout_height="12dp"
            android:text="@string/fields_height_basket"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/wall_fields_width"
            app:layout_constraintStart_toStartOf="@+id/wall_fields_width"
            app:layout_constraintTop_toBottomOf="@+id/wall_fields_width" />

        <TextView
            android:id="@+id/additions_textfield"
            android:layout_width="241dp"
            android:layout_height="0dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recycler_delete"
            app:layout_constraintStart_toEndOf="@+id/wall_height_textfield"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>