<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.BuildWallActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="149dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        android:src="@drawable/newyorker" />

    <TextView
        android:id="@+id/height_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/height"
        app:layout_constraintStart_toStartOf="@+id/editText_Height"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/width_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/width"
        app:layout_constraintStart_toStartOf="@+id/editText_Width"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText_Height"
        android:layout_width="108dp"
        android:layout_height="42dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/editText_Width"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_textfield" />

    <EditText
        android:id="@+id/editText_Width"
        android:layout_width="108dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_Height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText_Height" />

    <TextView
        android:id="@+id/panelcount_height_fextfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/panel_count_height_text"
        app:layout_constraintStart_toStartOf="@+id/editText_Height"
        app:layout_constraintTop_toBottomOf="@+id/editText_Height" />

    <TextView
        android:id="@+id/panelcount_width_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panel_count_width_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/panelcount_height_fextfield"
        app:layout_constraintTop_toTopOf="@+id/panelcount_height_fextfield" />

    <SeekBar
        android:id="@+id/seekBar_height"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="@+id/panelcount_height_fextfield"
        app:layout_constraintTop_toBottomOf="@+id/panelcount_height_fextfield" />

    <SeekBar
        android:id="@+id/seekBar_width"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="@+id/panelcount_width_textfield"
        app:layout_constraintTop_toBottomOf="@+id/panelcount_width_textfield" />

    <TextView
        android:id="@+id/additions_textfield"
        android:layout_width="62dp"
        android:layout_height="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/additions"
        app:layout_constraintStart_toStartOf="@+id/seekBar_height"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_height" />

    <TextView
        android:id="@+id/price_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="36dp"
        android:text="Prisestimat:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additions_textfield" />

    <TextView
        android:id="@+id/price_value_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5555 kr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_textfield" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Tilføj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_value_textfield" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="send"
        android:text="Færdig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button"
        app:layout_constraintVertical_bias="0.152" />

</androidx.constraintlayout.widget.ConstraintLayout>